--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<!--<version>0.0.1-SNAPSHOT</version>-->
+	<version>0.0.1</version>
 	
 	<name>maven-web-application</name>
 
@@ -97,8 +98,8 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>releaserepo</name>
+	      <url>http://192.168.1.9:8081/repository/releaserepo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
